--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,11 @@
 	<script type="text/javascript" src="/socket.io/socket.io.js"></script>
 	<script type="text/javascript">
 		var socket = io();
-		socket.on('connect',()=>{
+		socket.on('connect',function(){
 			console.log('connected to server');
 		});
 
-		socket.on('disconnect', ()=>{
+		socket.on('disconnect', function(){
 			console.log('disconnected from server');
 		});
 	</script>
